Remove usages of deprecated Thread.getId calls and switch into Thread.threadId ()